<resources>
    <string name="app_name">PokedexAPI</string>
    <string name="name">Name: </string>
    <string name="description">Description: </string>
    <string name="stats">Stats</string>
    <string name="height">Height: </string>
    <string name="weight">Weight: </string>
    <string name="abilities">Abilities: </string>
    <string name="type">Type: </string>
    <string name="search_hint">Search for a Pokemon!</string>
    <string name="hp">HP: </string>
    <string name="attack">Attack: </string>
    <string name="defense">Defense: </string>
    <string name="spAttack">Sp. Atk: </string>
    <string name="spDefense"> Sp. Def: </string>
    <string name="speed">Speed: </string>
    <string name="favorites">Favorites</string>
    <string name="date">Date created: </string>
    <string name="delete_favorite_message">Are you sure you want to delete %s?</string>
</resources>
