<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PokemonDisplayFragment">

    <ImageView
        android:id="@+id/sprite_imageView"
        android:layout_width="193dp"
        android:layout_height="191dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:src="@android:drawable/ic_menu_gallery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintBottom_toTopOf="@+id/type_TextView"
        app:layout_constraintEnd_toStartOf="@+id/sprite_imageView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/type_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        app:layout_constraintBottom_toTopOf="@+id/height_TextView"
        app:layout_constraintStart_toStartOf="@+id/name_TextView"
        app:layout_constraintTop_toBottomOf="@+id/name_TextView" />

    <TextView
        android:id="@+id/height_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height"
        app:layout_constraintBottom_toTopOf="@+id/weight_TextView"
        app:layout_constraintStart_toStartOf="@+id/type_TextView"
        app:layout_constraintTop_toBottomOf="@+id/type_TextView" />

    <TextView
        android:id="@+id/weight_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        app:layout_constraintBottom_toTopOf="@+id/characteristic_TextView"
        app:layout_constraintStart_toStartOf="@+id/height_TextView"
        app:layout_constraintTop_toBottomOf="@+id/height_TextView" />

    <TextView
        android:id="@+id/characteristic_TextView"
        android:layout_width="302dp"
        android:layout_height="56dp"
        android:text="@string/description"
        app:layout_constraintBottom_toTopOf="@+id/stats_textView"
        app:layout_constraintStart_toStartOf="@+id/weight_TextView"
        app:layout_constraintTop_toBottomOf="@+id/weight_TextView" />

    <SeekBar
        android:id="@+id/seekBar3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/seekBar4"
        app:layout_constraintStart_toStartOf="@+id/seekBar4"
        app:layout_constraintTop_toBottomOf="@+id/stats_textView"
        app:layout_constraintVertical_chainStyle="packed" />

    <SeekBar
        android:id="@+id/seekBar4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/seekBar5"
        app:layout_constraintStart_toStartOf="@+id/seekBar5"
        app:layout_constraintTop_toBottomOf="@+id/seekBar3" />

    <SeekBar
        android:id="@+id/seekBar8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/weight_TextView"
        app:layout_constraintTop_toBottomOf="@+id/seekBar7" />

    <SeekBar
        android:id="@+id/seekBar7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/seekBar8"
        app:layout_constraintStart_toStartOf="@+id/seekBar8"
        app:layout_constraintTop_toBottomOf="@+id/seekBar6" />

    <SeekBar
        android:id="@+id/seekBar6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/seekBar7"
        app:layout_constraintStart_toStartOf="@+id/seekBar7"
        app:layout_constraintTop_toBottomOf="@+id/seekBar5" />

    <SeekBar
        android:id="@+id/seekBar5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/seekBar6"
        app:layout_constraintStart_toStartOf="@+id/seekBar6"
        app:layout_constraintTop_toBottomOf="@+id/seekBar4" />

    <TextView
        android:id="@+id/stats_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="255dp"
        android:text="@string/stats"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/seekBar3" />

</androidx.constraintlayout.widget.ConstraintLayout>